# minimal-agent-framework-aws-bedrock

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
src/agent/: lg_graph.py  lg_nodes.py  lg_state.py  llm.py  pretty_print.py  retrieve.py  tool_registry.py  tools.py  trace.py
