[project]
name = "minimal-agent-framework"
version = "0.1.0"
description = "A minimal agent framework (Days 1-10) with LangGraph, explicit state, tools, guardrails, and policy-driven tool selection."
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.2.0",
  "langchain-aws>=0.2.0",
  "boto3>=1.34.0",
]

[project.scripts]
run-agent = "main:main"

[tool.uv]
package = false

[tool.ruff]
line-length = 100
